<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dip"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/pre_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:layout_gravity="center|center_horizontal"
        android:text="@string/esmQuestion" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/button_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laterButton" />

        <Button
            android:id="@+id/button_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nowButton" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/button_busy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busyButton" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelButton" />

        <Button
            android:id="@+id/button_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="help"
            android:text="@string/helpButton" />

    </LinearLayout>

</LinearLayout>
